# rust_izee_project_brick

./: .env example  .gitignore  Cargo.toml  README.md
src/: main.rs
