[package]
name = "rust_izee_project_brick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.2"
tungstenite = "0.19.0"
url = "2.3.1"
serde_json = "1.0.96"
serde = {version  = "1.0.163", features = ["derive"]}
hex = "0.4.3"