[package]
name = "rust_izee_project_brick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.2"
tungstenite = "0.19.0"
url = "2.3.1"
serde_json = "1.0.96"
serde = {version  = "1.0.163", features = ["derive"]}
hex = "0.4.3"
ethers = {version = "2.0.6", features = ["ws"]}
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
dotenv = "0.15.0"
